versioned_docs/version-0.12/api/public-api/type-aliases/TriggerEventType.md
[**@devvit/public-api v0.12.13-dev**](../README.md)

***

# Type Alias: TriggerEventType

> **TriggerEventType** = `object`

Maps a TriggerEvent to a Protobuf message and type.

## Properties

<a id="appinstall"></a>

### AppInstall

> **AppInstall**: `object` & [`AppInstall`](../@devvit/namespaces/EventTypes/interfaces/AppInstall.md)

#### Type declaration

##### type

> **type**: `"AppInstall"`

***

<a id="appupgrade"></a>

### AppUpgrade

> **AppUpgrade**: `object` & [`AppUpgrade`](../@devvit/namespaces/EventTypes/interfaces/AppUpgrade.md)

#### Type declaration

##### type

> **type**: `"AppUpgrade"`

***

<a id="automoderatorfiltercomment"></a>

### AutomoderatorFilterComment

> **AutomoderatorFilterComment**: `object` & [`AutomoderatorFilterComment`](../@devvit/namespaces/EventTypes/interfaces/AutomoderatorFilterComment.md)

#### Type declaration

##### type

> **type**: `"AutomoderatorFilterComment"`

***

<a id="automoderatorfilterpost"></a>

### AutomoderatorFilterPost

> **AutomoderatorFilterPost**: `object` & [`AutomoderatorFilterPost`](../@devvit/namespaces/EventTypes/interfaces/AutomoderatorFilterPost.md)

#### Type declaration

##### type

> **type**: `"AutomoderatorFilterPost"`

***

<a id="commentcreate"></a>

### CommentCreate

> **CommentCreate**: `object` & [`CommentCreate`](../@devvit/namespaces/EventTypes/interfaces/CommentCreate.md)

#### Type declaration

##### type

> **type**: `"CommentCreate"`

***

<a id="commentdelete"></a>

### CommentDelete

> **CommentDelete**: `object` & [`CommentDelete`](../@devvit/namespaces/EventTypes/interfaces/CommentDelete.md)

#### Type declaration

##### type

> **type**: `"CommentDelete"`

***

<a id="commentreport"></a>

### CommentReport

> **CommentReport**: `object` & [`CommentReport`](../@devvit/namespaces/EventTypes/interfaces/CommentReport.md)

#### Type declaration

##### type

> **type**: `"CommentReport"`

***

<a id="commentsubmit"></a>

### CommentSubmit

> **CommentSubmit**: `object` & [`CommentSubmit`](../@devvit/namespaces/EventTypes/interfaces/CommentSubmit.md)

#### Type declaration

##### type

> **type**: `"CommentSubmit"`

***

<a id="commentupdate"></a>

### CommentUpdate

> **CommentUpdate**: `object` & [`CommentUpdate`](../@devvit/namespaces/EventTypes/interfaces/CommentUpdate.md)

#### Type declaration

##### type

> **type**: `"CommentUpdate"`

***

<a id="modaction"></a>

### ModAction

> **ModAction**: `object` & `protos.ModAction`

#### Type declaration

##### type

> **type**: `"ModAction"`

***

<a id="modmail"></a>

### ModMail

> **ModMail**: `object` & `protos.ModMail`

#### Type declaration

##### type

> **type**: `"ModMail"`

***

<a id="postcreate"></a>

### PostCreate

> **PostCreate**: `object` & [`PostCreate`](../@devvit/namespaces/EventTypes/interfaces/PostCreate.md)

#### Type declaration

##### type

> **type**: `"PostCreate"`

***

<a id="postdelete"></a>

### PostDelete

> **PostDelete**: `object` & [`PostDelete`](../@devvit/namespaces/EventTypes/interfaces/PostDelete.md)

#### Type declaration

##### type

> **type**: `"PostDelete"`

***

<a id="postflairupdate"></a>

### PostFlairUpdate

> **PostFlairUpdate**: `object` & [`PostFlairUpdate`](../@devvit/namespaces/EventTypes/interfaces/PostFlairUpdate.md)

#### Type declaration

##### type

> **type**: `"PostFlairUpdate"`

***

<a id="postnsfwupdate"></a>

### PostNsfwUpdate

> **PostNsfwUpdate**: `object` & [`PostNsfwUpdate`](../@devvit/namespaces/EventTypes/interfaces/PostNsfwUpdate.md)

#### Type declaration

##### type

> **type**: `"PostNsfwUpdate"`

***

<a id="postreport"></a>

### PostReport

> **PostReport**: `object` & [`PostReport`](../@devvit/namespaces/EventTypes/interfaces/PostReport.md)

#### Type declaration

##### type

> **type**: `"PostReport"`

***

<a id="postspoilerupdate"></a>

### PostSpoilerUpdate

> **PostSpoilerUpdate**: `object` & [`PostSpoilerUpdate`](../@devvit/namespaces/EventTypes/interfaces/PostSpoilerUpdate.md)

#### Type declaration

##### type

> **type**: `"PostSpoilerUpdate"`

***

<a id="postsubmit"></a>

### PostSubmit

> **PostSubmit**: `object` & [`PostSubmit`](../@devvit/namespaces/EventTypes/interfaces/PostSubmit.md)

#### Type declaration

##### type

> **type**: `"PostSubmit"`

***

<a id="postupdate"></a>

### PostUpdate

> **PostUpdate**: `object` & [`PostUpdate`](../@devvit/namespaces/EventTypes/interfaces/PostUpdate.md)

#### Type declaration

##### type

> **type**: `"PostUpdate"`
